--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,25 +4,22 @@ title: "projects"
 permalink: /projects/
 ---
 {% include callout.html type = "info" content = "Please check my <a href='/Resume-JamesStubbs.pdf'>resume</a> and <a
-      href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
+        href='https://linkedin.com/in/jamescstubbs'>LinkedIn</a> for professional information. I am open to any offers." %}
 <!--
   yeah, i have a ton of regret for not being able to see projects through completion.
   in my life i always either have 0 motivation to do anything or i "hyperfocus" and basically spend whole days doing nothing but working on something.
   right now, i guess i'm hyperfocusing on the site redesign.
   but since like spring 2023 up to now, august, its been just non-stop executive dysfunction for the most part
-  
+
   that's why textarea.site rotted,
   and any other possible projects didn't even get started.
   i've spent all this time working on roblox games, like my entire high school life but i've only released 1. spooking out, which was due to my friend helping me that prevented it from rotting.
-  
+
   i hope getting back into the schedule of school and other stuff thats improving my life will allow me to be more productive.
   we'll see.
-  
   these html comments are nice for letting me vent
   i never talk about this stuff online
-  
   thank you for reading. i will persevere
-  
   9/27/23 update:
   things are going good with micrathena, and my life in general. :^)
 -->
@@ -33,7 +30,7 @@ permalink: /projects/
       width="32"
       height="32"
       alt=""
-      class="icon">Roblox Legacy Documentation</h3>
+      class="icon">Legacy Roblox Wiki</h3>
   <p class="project-links">
     <a href="https://wiki.realja.me">https://wiki.realja.me</a>
     ·
@@ -42,7 +39,7 @@ permalink: /projects/
     <a href="/devlogs/wiki-2.html">April update post</a>
   </p>
   <p class="project-status">Active since December 2022</p>
-  <p class="project-description">A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and 
+  <p class="project-description">A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and  
         resources to help people make
         new games for classic clients in 2023.</p>
 </div>
@@ -61,9 +58,9 @@ permalink: /projects/
     <a href="https://github.com/real-jame/textarea">Source code</a>
   </p>
   <p class="project-status">August - November 2022, active since September 2023</p>
-  <p class="project-description">Textarea is an auto-saving textbox website. It's intentionally simple - only plain 
+  <p class="project-description">Textarea is an auto-saving textbox website. It's intentionally simple - only plain  
         text, and only the 1 page. When you reopen the site, anything previously written will remain. Great for taking
-        quick notes.<br>I've been slowly working on a major update in September, in-between work on Micrathena, that 
+        quick notes.<br>I've been slowly working on a major update in September, in-between work on Micrathena, that  
         makes it less bloated and adds some new features.</p>
 </div>
 <div class="card card-active">
@@ -78,7 +75,7 @@ permalink: /projects/
     <a href="https://github.com/real-jame/realjame">Source code</a>
   </p>
   <p class="project-status">Active since November 2021</p>
-  <p class="project-description">This website is a project in itself. It's been on and off, but so far its endured 3 
+  <p class="project-description">This website is a project in itself. It's been on and off, but so far its endured 3  
         comprehensive redesigns and expansions. It currently has 3 post feeds - a blog, devlogs, and "daily notes". By
         September 2023, posting should finally be active and consistent.<br>This website is made using
     <a href="https://jekyllrb.com/">Jekyll</a>, a static site generator tool.
@@ -101,11 +98,11 @@ permalink: /projects/
     <a href="/blog/spooking-out-modern-roblox-port.html">Port announcement</a>
   </p>
   <p class="project-status">Complete! | September - November 2022</p>
-  <p class="project-description">Spooking Out is a Halloween game made for 2010 Roblox by me and a friend. It's a 
+  <p class="project-description">Spooking Out is a Halloween game made for 2010 Roblox by me and a friend. It's a  
         simple arcade-style game about working together to catch ghosts in various maps. A simple game, but we had a lot
-        of fun making it and playing it with the community on release :)<br>It was submitted for the Novetus Halloween 
+        of fun making it and playing it with the community on release :)<br>It was submitted for the Novetus Halloween  
         game contest,
-    <b>and we won!!!!!!! Our game is now bundled with Novetus as a default map.</b><br>I also ported it to modern 
+    <b>and we won!!!!!!! Our game is now bundled with Novetus as a default map.</b><br>I also ported it to modern  
         Roblox, adding controller/Xbox/mobile support and badges.
   </p>
 </div>
@@ -115,7 +112,7 @@ permalink: /projects/
       width="32"
       height="32"
       alt=""
-      class="icon">Untitled 
+      class="icon">Untitled  
         farming game for 2012 Roblox</h3>
   <p class="project-links">
     <a href="/devlogs/farming-1.html">Devlog 1</a>
@@ -125,7 +122,7 @@ permalink: /projects/
     <a href="/devlogs/farming-3.html">Devlog 3</a>
   </p>
   <p class="project-status">April - June 2023</p>
-  <p class="project-description">This was planned to be a new game for the 2012 Roblox engine. Gameplay is divided 
+  <p class="project-description">This was planned to be a new game for the 2012 Roblox engine. Gameplay is divided  
         into peaceful Stardew Valley inspired gameplay of farming, decorating your farm, etc. and part roguelike-style
         exploring wild forests to collect materials. Make money to level up your farm, and a whole lot more ideas and
         plans. However, the game suffered intense scope creep, and I got burned out from development (especially in the
@@ -137,7 +134,7 @@ permalink: /projects/
       width="32"
       height="32"
       alt=""
-      class="icon">2010 
+      class="icon">2010  
         Roblox prototype experiments</h3>
   <p class="project-links">
     <a href="/devlogs/lava-escape-proto-1.html">Lava escape</a>
@@ -147,7 +144,7 @@ permalink: /projects/
     <a href="/devlogs/movementpvp-proto-2.html">Movement PVP</a>
   </p>
   <p class="project-status">January - April 2023</p>
-  <p class="project-description">I was experimenting with random game ideas while trying to think of something to make 
+  <p class="project-description">I was experimenting with random game ideas while trying to think of something to make  
         with other Novetus creators. None really seemed like "the one", but the lava one could make for a simple fun
         game to be made in a weekend.</p>
 </div>
