december reading dailynote

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@ title: "realja.me"
 </p>
 
 <h2>Welcome</h2>
-<p>You have found realja.me. This is my website, and has a little bit of content at the moment.</p>
-<p>In short, I do web programming. I also like making Roblox games, specifically in old versions of the engine.</p>
+<p>This is realja.me. My website, and has a little bit of content at the moment.</p>
+<p>I'm a programmer, supposedly.</p>
 <p>Here, you'll find 3 separate blogs: a
   <a href="/blog">standard blog</a>,
   <a href="/devlog">devlogs</a>
-  - updates on my ongoing projects mainly through screenshots, and
+  - project updates (currently inactive), and
   <a href="/dailynote">"daily notes"</a>
   - brief, frequent writing about stuff I've learned.</p>
-<p>It's mainly informative content, but hopefully not entirely boring (daily notes aside) and impersonal. I wish to write about the things I enjoy in a way that'll make other people appreciate them.</p>
-<p>Of course, this website is always slowly expanding, as are my collection of projects. You can
+<p>It's mainly informative content, but I want it to be personal. I wish to write about the things I enjoy in a way that'll make other people appreciate them.</p>
+<p>This website is always slowly expanding. You can
   <a href="/contact">subscribe to the RSS feed and find me on social media</a>
   to stay up to date.</p>
+<p>Thanks! - james</p>
 
 <h2>Recent Daily Notes</h2>
 <div>
