that's about it lol

--- a/dailynote/index.html
+++ b/dailynote/index.html
@@ -34,4 +34,4 @@ title: "daily notes"
 
 {% include rss.html %}
 
-{% include post-list.html category = "dailynote" %}
+{% include post-list.html category = "dailynote" limit = 999 %}
