--- a/devlog/index.html
+++ b/devlog/index.html
@@ -6,18 +6,18 @@ title: "posts"
 {% include tagcloud.html category = "devlog" %}
 {% include tagcloud-simple.html category = "devlog" message = "Sort by project:" %}
 {% include rss.html %}
-{% include post-list-card.html category = "devlog" %}
+{% include post-list-card.html category = "devlog" limit = 999 %}
 
 {% comment %} {% include callout.html type="note" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="info" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="summary" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="todo" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="tip" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="success" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="question" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="warning" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="failure" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="danger" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="bug" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
-    {% include callout.html type="example" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="info" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="summary" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="todo" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="tip" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="success" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="question" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="warning" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="failure" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="danger" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="bug" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
+      {% include callout.html type="example" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %}
 {% include callout.html type="quote" content="I've followed these steps on Ubuntu 22.04.3 WSL - this guide should apply to any Linux distribution based on Debian, not just Debian itself." %} {% endcomment %}
