ok now we're almost good note that the 1 dailynote isnt done yet

--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@ layout: default
 title: "realja.me"
 ---
 <p class="text-focus">
-  <i>realjame: Always under construction, never working, always sleeping...</i>
-</p>
+  <i>realjame: Always under construction, never working, always sleeping...</i></p>
 
-<h1>Welcome</h1>
-<p>This is realja.me. My website, and has a little bit of content at the moment.</p>
-<p>I'm a programmer, supposedly.</p>
-<p>Here, you'll find 3 separate blogs: a
-  <a href="/blog">standard blog</a>,
-  <a href="/devlog">devlogs</a>
-  - project updates (currently inactive), and
-  <a href="/dailynote">"daily notes"</a>
-  - brief, frequent writing about stuff I've learned.</p>
-<p>It's mainly informative content, but I want it to be personal. I wish to write about the things I enjoy in a way that'll make other people appreciate them.</p>
-<p>This website is always slowly expanding. You can
-  <a href="/contact">subscribe to the RSS feed and find me on social media</a>
-  to stay up to date.</p>
-<p>Thanks! - james</p>
+{% comment %} <h1>Welcome</h1>
+  <p>This is realja.me. My website, and has a little bit of content at the moment.</p>
+  <p>I'm a programmer, supposedly.</p>
+  <p>Here, you'll find 3 separate blogs: a
+    <a href="/blog">standard blog</a>,
+    <a href="/devlog">devlogs</a>
+    - project updates (currently inactive), and
+    <a href="/dailynote">"daily notes"</a>
+    - brief, frequent writing about stuff I've learned.</p>
+  <p>It's mainly informative content, but I want it to be personal. I wish to write about the things I enjoy in a way that'll make other people appreciate them.</p>
+  <p>This website is always slowly expanding. You can
+    <a href="/contact">subscribe to the RSS feed and find me on social media</a>
+    to stay up to date.</p>
+<p>Thanks! - james</p> {% endcomment %}
 
 {% include post-list.html %}
