more file syncing

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,7 +26,7 @@ permalink: /projects/
 {% include /projects/micrathena.html %}
 <div class="card card-active">
   <h3 class="project-title"><img
-      src="/assets/icons/rbxlegacydocs.ico"
+      src="/assets/icons/rbxlegacydocs.png"
       width="32"
       height="32"
       alt=""
@@ -39,7 +39,7 @@ permalink: /projects/
     <a href="/devlogs/wiki-2.html">April update post</a>
   </p>
   <p class="project-status">Active since December 2022</p>
-  <p class="project-description">A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and          
+  <p class="project-description">A rehosting of the Roblox Wiki from 2012, expanded with updated documentation and            
         resources to help people make
         new games for classic clients in 2023.</p>
 </div>
@@ -55,7 +55,7 @@ permalink: /projects/
     <a href="https://github.com/real-jame/realjame">Source code</a>
   </p>
   <p class="project-status">Active since November 2021</p>
-  <p class="project-description">This website is a project in itself. It's been on and off, but so far its endured 3          
+  <p class="project-description">This website is a project in itself. It's been on and off, but so far its endured 3            
         comprehensive redesigns and expansions. It currently has 3 post feeds - a blog, devlogs, and "daily notes". By
         September 2023, posting should finally be active and consistent.<br>This website is made using
     <a href="https://jekyllrb.com/">Jekyll</a>, a static site generator tool.
@@ -78,17 +78,17 @@ permalink: /projects/
     <a href="/blog/spooking-out-modern-roblox-port.html">Port announcement</a>
   </p>
   <p class="project-status">Complete! | September - November 2022</p>
-  <p class="project-description">Spooking Out is a Halloween game made for 2010 Roblox by me and a friend. It's a          
+  <p class="project-description">Spooking Out is a Halloween game made for 2010 Roblox by me and a friend. It's a            
         simple arcade-style game about working together to catch ghosts in various maps. A simple game, but we had a lot
-        of fun making it and playing it with the community on release :)<br>It was submitted for the Novetus Halloween          
+        of fun making it and playing it with the community on release :)<br>It was submitted for the Novetus Halloween            
         game contest,
-    <b>and we won!!!!!!! Our game is now bundled with Novetus as a default map.</b><br>I also ported it to modern          
+    <b>and we won!!!!!!! Our game is now bundled with Novetus as a default map.</b><br>I also ported it to modern            
         Roblox, adding controller/Xbox/mobile support and badges.
   </p>
 </div>
 <div class="card card-inactive">
   <h3 class="project-title"><img
-      src="/assets/icons/textarea.ico"
+      src="/assets/icons/textarea.png"
       width="32"
       height="32"
       alt=""
@@ -101,7 +101,7 @@ permalink: /projects/
     <a href="https://github.com/real-jame/textarea">Source code</a>
   </p>
   <p class="project-status">August - November 2022, September - October 2023</p>
-  <p class="project-description">Textarea is an auto-saving textbox website. It's intentionally simple - only plain          
+  <p class="project-description">Textarea is an auto-saving textbox website. It's intentionally simple - only plain            
         text, and only the 1 page. When you reopen the site, anything previously written will remain. Great for taking
         quick notes.<br>I rewrote the site in a new framework in September to make it much lighter, along with add some features. It does the job, so no need to keep adding to it.</p>
 </div>
@@ -111,7 +111,7 @@ permalink: /projects/
       width="32"
       height="32"
       alt=""
-      class="icon">Untitled          
+      class="icon">Untitled            
         farming game for 2012 Roblox</h3>
   <p class="project-links">
     <a href="/devlogs/farming-1.html">Devlog 1</a>
@@ -121,7 +121,7 @@ permalink: /projects/
     <a href="/devlogs/farming-3.html">Devlog 3</a>
   </p>
   <p class="project-status">April - June 2023</p>
-  <p class="project-description">This was planned to be a new game for the 2012 Roblox engine. Gameplay is divided          
+  <p class="project-description">This was planned to be a new game for the 2012 Roblox engine. Gameplay is divided            
         into peaceful Stardew Valley inspired gameplay of farming, decorating your farm, etc. and part roguelike-style
         exploring wild forests to collect materials. Make money to level up your farm, and a whole lot more ideas and
         plans. However, the game suffered intense scope creep, and I got burned out from development (especially in the
@@ -133,7 +133,7 @@ permalink: /projects/
       width="32"
       height="32"
       alt=""
-      class="icon">2010          
+      class="icon">2010            
         Roblox prototype experiments</h3>
   <p class="project-links">
     <a href="/devlogs/lava-escape-proto-1.html">Lava escape</a>
@@ -143,7 +143,7 @@ permalink: /projects/
     <a href="/devlogs/movementpvp-proto-2.html">Movement PVP</a>
   </p>
   <p class="project-status">January - April 2023</p>
-  <p class="project-description">I was experimenting with random game ideas while trying to think of something to make          
+  <p class="project-description">I was experimenting with random game ideas while trying to think of something to make            
         with other Novetus creators. None really seemed like "the one", but the lava one could make for a simple fun
         game to be made in a weekend.</p>
 </div>
